[package]
name = "bespoke-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bytemuck = { version = "1.14.3", features=["derive"] }
cgmath = "0.18.0"
image = "0.25.0"
resource = "0.5.0"
log = "0.4.21"
pollster = "0.3.0"
tobj = { version = "4.0.2", features=["async"] }
wgpu = "0.19.1"
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
pathdiff = "0.2.1"
load_file = "1.0.1"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.29.15", features = ["android-game-activity"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
winit = "0.29.15"
